<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/monster_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/monster_locations"
                style="@style/Widget.App.TextView.MonsterDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanchez"
                tools:text="@tools:sample/us_zipcodes" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_grey" />

            <TextView
                android:id="@+id/monster_description"
                style="@style/Widget.App.TextView.MonsterDetail.Big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem/random" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_grey" />

            <ImageView
                android:id="@+id/monster_image"
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/description_monster_image" />

            <TextView
                android:id="@+id/monster_image_url"
                style="@style/Widget.App.TextView.MonsterDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:tag="@string/tag_monster_image_url"
                tools:text="@tools:sample/us_phones"
                tools:visibility="visible" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/monster_progress"
        layout="@layout/view_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>