<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appname">HYRULE MONSTERS</string>
    <string name="error_retry">RETRY</string>

    <!-- hyrule module strings -->
    <string name="monsters_title">@string/appname</string>
    <string name="monsters_menu_settings">Settings</string>
    <string name="error_server_response">Error obtaining data from the server</string>
    <string name="monster_title" />
    <string name="description_monster_image">Monster image</string>
    <string name="tag_monster_image_loaded" translatable="false">Monster image loaded</string>
    <string name="tag_monster_image_url" translatable="false">Monster image url</string>

    <!-- settings module strings -->
    <string name="settings">Settings</string>

    <string name="preferences_cache">Cache</string>
...
